--- a/package.json
+++ b/package.json
@@ -10,15 +10,26 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-themes": "^0.2.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
+    "axios": "^0.27.2",
+    "luxon": "^2.4.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.36",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
+    "@types/luxon": "^2.3.2",
+    "@vercel/node": "^1.15.2",
     "typescript": "4.7.2"
   }
 }
